--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.0.0",
   "description": "Just a sample app.",
   "main": "sampleNode.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "example",
-    "heroku",
-    "sample"
-  ],
-  "author": "chase barrette",
-  "license": "ISC",
   "dependencies": {
     "express": "^3.5.1",
     "logfmt": "^1.1.2"
-  }
-  "engines": {
-    "node": "0.10.x"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/barrettec777/ccb-sampleapp1.git"
+  },
+  "keywords": [
+    "heroku",
+    "app",
+    "sample",
+    "node"
+  ],
+  "author": "chase barrette",
+  "license": "ISC"
 }
